# aovestdipaperino-tokensave

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CNAME  Cargo.toml  README.md  SECURITY.md  TEST-QUERIES.md  build.rs  index.html  quick-setup.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci-repair.yml  release-beta.yml  release.yml
docs/: BRANCHING-USER-GUIDE.md  COMPARABLE-TOOLS.md  DAEMON-VERSIONING.md  DESIGN-DOC.md  EXPLORE-TOOL-IMPROVEMENTS.md  MULTI-BRANCH-DESIGN.md  MULTIBRANCH-MANUAL-TESTING.md  QUERY-OPTIMIZATIONS.md  USER-GUIDE.md
docs/superpowers/plans/: 2026-03-24-multi-language-expansion.md
scripts/: block-explore-agent.sh  post-commit  setup.sh
src/: branch.rs  branch_meta.rs  cloud.rs  config.rs  daemon.rs  display.rs  doctor.rs  errors.rs  extraction_worker.rs  global_db.rs  hooks.rs  lib.rs  main.rs  monitor.rs  sync.rs  tokensave.rs  types.rs  upgrade.rs  user_config.rs
src/accounting/: classifier.rs  metrics.rs  mod.rs  parser.rs  pricing.rs
src/agents/: claude.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  mod.rs  opencode.rs  roo_code.rs  zed.rs
src/context/: builder.rs  formatter.rs  ranking.rs
src/db/: connection.rs  migrations.rs  queries.rs
src/extraction/: bash_extractor.rs  batch_extractor.rs  c_extractor.rs  clojure_extractor.rs  cobol_extractor.rs  complexity.rs  cpp_extractor.rs  csharp_extractor.rs  dart_extractor.rs  dockerfile_extractor.rs  elixir_extractor.rs  erlang_extractor.rs  fortran_extractor.rs  fsharp_extractor.rs  glsl_extractor.rs  go_extractor.rs  gwbasic_extractor.rs  haskell_extractor.rs  java_extractor.rs  julia_extractor.rs  kotlin_extractor.rs  lean_extractor.rs  lua_extractor.rs  markdown_extractor.rs  mod.rs  msbasic2_extractor.rs  nix_extractor.rs  objc_extractor.rs  ocaml_extractor.rs  pascal_extractor.rs  perl_extractor.rs  php_extractor.rs  powershell_extractor.rs  proto_extractor.rs  python_extractor.rs  qbasic_extractor.rs  quickbasic_extractor.rs  quint_extractor.rs  r_extractor.rs  ruby_extractor.rs  (+9 more)
src/graph/: health.rs  mod.rs  queries.rs  traversal.rs
src/mcp/: server.rs  tools.rs  transport.rs
src/mcp/tools/: definitions.rs  handlers.rs  mod.rs
src/resolution/: resolver.rs
src/resources/: logo.ansi
src/tree_sitter/: cobol.rs  mod.rs  protobuf.rs
src/vectors/: search.rs
tests/: agent_test.rs  c_extraction_test.rs  cloud_test.rs  complexity_test.rs  config_test.rs  context_test.rs  copilot_agent_test.rs  corruption_test.rs  cpp_extraction_test.rs  csharp_extraction_test.rs  dart_extraction_test.rs  db_query_test.rs  db_test.rs  display_test.rs  dockerfile_extraction_test.rs  extraction_test.rs  fixture_extraction_test.rs  go_extraction_test.rs  graph_test.rs  integration_test.rs  java_extraction_test.rs  kotlin_extraction_test.rs  lean_extraction_test.rs  markdown_extraction_test.rs  mcp_handler_test.rs  mcp_server_test.rs  mcp_test.rs  migration_test.rs  nix_extraction_test.rs  objc_extraction_test.rs  pascal_extraction_test.rs  php_extraction_test.rs  python_extraction_test.rs  quickbasic_extraction_test.rs  quint_extraction_test.rs  resolution_test.rs  ruby_extraction_test.rs  rust_extraction_test.rs  scala_extraction_test.rs  swift_extraction_test.rs  (+7 more)
tests/fixtures/: sample.bi  sample.dockerfile  sample.m  sample.nix  sample.swift
