[package]
name = "tokensave"
version = "3.2.1"
edition = "2021"
description = "Code intelligence tool that builds a semantic knowledge graph from Rust, Go, Java, Scala, TypeScript, Python, C, C++, Kotlin, C#, Swift, and many more codebases"
license = "MIT"
repository = "https://github.com/aovestdipaperino/tokensave"
homepage = "https://github.com/aovestdipaperino/tokensave"
readme = "README.md"
keywords = ["code-intelligence", "knowledge-graph", "mcp", "tree-sitter", "claude"]
categories = ["development-tools", "command-line-utilities"]

[features]
default = ["full"]

# Lite tier (11 languages) — always compiled, no feature flag needed:
# Rust, Go, Java, Scala, TypeScript/JavaScript, Python, C, C++, Kotlin, C#, Swift
lite = []

medium = ["lang-dart", "lang-pascal", "lang-php", "lang-ruby", "lang-bash", "lang-protobuf", "lang-powershell", "lang-nix", "lang-vbnet"]
full = ["medium", "lang-lua", "lang-zig", "lang-objc", "lang-perl", "lang-batch", "lang-fortran", "lang-cobol", "lang-msbasic2", "lang-gwbasic", "lang-qbasic"]

# Language features (all grammars provided by tokensave-large-treesitters)
lang-dart = []
lang-pascal = []
lang-php = []
lang-ruby = []
lang-bash = []
lang-protobuf = []
lang-powershell = []
lang-nix = []
lang-vbnet = []
lang-lua = []
lang-zig = []
lang-objc = []
lang-perl = []
lang-batch = []
lang-fortran = []
lang-cobol = []
lang-msbasic2 = []
lang-gwbasic = []
lang-qbasic = []

[lib]
name = "tokensave"

[[bin]]
name = "tokensave"
path = "src/main.rs"

[dependencies]
libsql = "0.9.30"
tree-sitter = "0.26"
tokensave-large-treesitters = "0.2"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ndarray = "0.17"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
ureq = { version = "3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
glob = "0.3"
walkdir = "2"
ignore = "0.4"
gix = { version = "0.81", default-features = false, features = ["revision", "blob-diff", "sha1"] }
dialoguer = "0.11"
dirs = "6"
daemon-kit = "0.1.3"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
hex = "0.4"
rayon = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_IO"] }

[build-dependencies]
logo-art = "0.2"

[dev-dependencies]
tempfile = "3"
